syntax = "proto3";
package companies;
import "company.proto";
import "profile.proto";
import "jobTitle.proto";

message CompanyPeopleMapping {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 companyId = 8;
  optional int32 profileId = 9;
  optional int32 jobTitleId = 10;
  optional Company company = 11;
  optional Profile profile = 12;
  optional JobTitle jobTitle = 13;
}
