// Original file: src/proto/proto/hashtags.proto


export interface HashTag {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (number);
  'updatedBy'?: (number);
  'state'?: (string);
  'name'?: (string);
}

export interface HashTag__Output {
  'id': (number);
  'createdAt': (string);
  'updatedAt': (string);
  'createdBy': (number);
  'updatedBy': (number);
  'state': (string);
  'name': (string);
}
